--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144-precomposed.png">
 <link rel="shortcut icon" href="favicon.png">
 
-<link rel="stylesheet" href="_layout/css/base.css">
-<link rel="stylesheet" href="_layout/css/grid.css">
-<link rel="stylesheet" href="_layout/css/elements.css">
-<link rel="stylesheet" href="_layout/css/layout.css">
-<link rel="stylesheet" href="_layout/js/bxslider/jquery.bxslider.css">
-<link rel="stylesheet" href="_layout/js/magnificpopup/magnific-popup.css">
+<link rel="stylesheet" href="layout/css/base.css">
+<link rel="stylesheet" href="layout/css/grid.css">
+<link rel="stylesheet" href="layout/css/elements.css">
+<link rel="stylesheet" href="layout/css/layout.css">
+<link rel="stylesheet" href="layout/js/bxslider/jquery.bxslider.css">
+<link rel="stylesheet" href="layout/js/magnificpopup/magnific-popup.css">
 
 <!-- /// Template Skin CSS ////////  -->
-<!--<link rel="stylesheet" href="_layout/css/skins/default.css">-->
-<!-- <link rel="stylesheet" href="_layout/css/skins/blue.css"> -->
- <link rel="stylesheet" href="_layout/css/skins/red.css">
-<!-- <link rel="stylesheet" href="_layout/css/skins/purple.css"> -->
-<!-- <link rel="stylesheet" href="_layout/css/skins/green.css"> -->
-<!-- <link rel="stylesheet" href="_layout/css/skins/yellow.css"> -->
+<!--<link rel="stylesheet" href="layout/css/skins/default.css">-->
+<!-- <link rel="stylesheet" href="layout/css/skins/blue.css"> -->
+ <link rel="stylesheet" href="layout/css/skins/red.css">
+<!-- <link rel="stylesheet" href="layout/css/skins/purple.css"> -->
+<!-- <link rel="stylesheet" href="layout/css/skins/green.css"> -->
+<!-- <link rel="stylesheet" href="layout/css/skins/yellow.css"> -->
 
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
-<link rel="stylesheet" href="_layout/css/fontawesome/font-awesome.min.css">
-<link rel="stylesheet" href="_layout/css/print.css" media="print">
-<script src="_layout/js/modernizr-2.6.2.min.js"></script>
+<link rel="stylesheet" href="layout/css/fontawesome/font-awesome.min.css">
+<link rel="stylesheet" href="layout/css/print.css" media="print">
+<script src="layout/js/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
 
@@ -68,7 +68,7 @@
             <!--<i class="fa fa-google-plus"></i>-->
             <!--</a>-->
 
-            <a href="http://linkedin.com/in/danoph" class="linkedin-icon social-icon">
+            <a href="https://linkedin.com/in/danoph" class="linkedin-icon social-icon">
               <i class="fa fa-linkedin"></i>
             </a>
 
@@ -77,7 +77,7 @@
           <p class="last">
           <span class="hidden-tablet">Email: </span><a href="mailto:danoph@gmail.com">danoph@gmail.com</a>
           <br><span class="hidden-tablet">Phone: </span>636.634.7880
-          <br><span class="hidden-tablet">Web: </span><a href="http://danoph.com">danoph.com</a>
+          <br><span class="hidden-tablet">Web: </span><a href="https://danoph.com">danoph.com</a>
           </p>
 
         </div><!-- end .cv-item -->
@@ -449,7 +449,7 @@
             <!--<h2>Contact Form</h2>-->
           <!--</div>-->
 
-          <!--<form class="fixed" id="contact-form"  name="contact-form" method="post" action="_layout/php/send.php">-->
+          <!--<form class="fixed" id="contact-form"  name="contact-form" method="post" action="layout/php/send.php">-->
             <!--<fieldset>-->
               <!--<div id="formstatus"></div>-->
               <!--<input id="name" type="text" name="name" value="" placeholder="name">-->
@@ -481,23 +481,23 @@
   ga('send', 'pageview');
 
 </script>
-<script src="_layout/js/jquery-2.1.0.min.js"></script>
-<script src="_layout/js/viewport/jquery.viewport.js"></script>
-<script src="_layout/js/easing/jquery.easing.1.3.js"></script>
-<script src="_layout/js/simpleplaceholder/jquery.simpleplaceholder.js"></script>
-<script src="_layout/js/fitvids/jquery.fitvids.js"></script>
-<script src="_layout/js/bxslider/jquery.bxslider.min.js"></script>
-<script src="_layout/js/magnificpopup/jquery.magnific-popup.min.js"></script>
-<script src="_layout/js/isotope/imagesloaded.pkgd.min.js"></script>
-<script src="_layout/js/isotope/isotope.pkgd.min.js"></script>
-<script src="_layout/js/parallax/jquery.parallax.min.js"></script>
-<script src="_layout/js/easypiechart/jquery.easypiechart.min.js"></script>
-<script src="_layout/js/easytabs/jquery.easytabs.min.js"></script>
-<script src="_layout/js/jqueryvalidate/jquery.validate.min.js"></script>
-<script src="_layout/js/jqueryform/jquery.form.min.js"></script>
+<script src="layout/js/jquery-2.1.0.min.js"></script>
+<script src="layout/js/viewport/jquery.viewport.js"></script>
+<script src="layout/js/easing/jquery.easing.1.3.js"></script>
+<script src="layout/js/simpleplaceholder/jquery.simpleplaceholder.js"></script>
+<script src="layout/js/fitvids/jquery.fitvids.js"></script>
+<script src="layout/js/bxslider/jquery.bxslider.min.js"></script>
+<script src="layout/js/magnificpopup/jquery.magnific-popup.min.js"></script>
+<script src="layout/js/isotope/imagesloaded.pkgd.min.js"></script>
+<script src="layout/js/isotope/isotope.pkgd.min.js"></script>
+<script src="layout/js/parallax/jquery.parallax.min.js"></script>
+<script src="layout/js/easypiechart/jquery.easypiechart.min.js"></script>
+<script src="layout/js/easytabs/jquery.easytabs.min.js"></script>
+<script src="layout/js/jqueryvalidate/jquery.validate.min.js"></script>
+<script src="layout/js/jqueryform/jquery.form.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script src="_layout/js/gmap/jquery.gmap.min.js"></script>
-<script src="_layout/js/plugins.js"></script>
-<script src="_layout/js/scripts.js"></script>
+<script src="layout/js/gmap/jquery.gmap.min.js"></script>
+<script src="layout/js/plugins.js"></script>
+<script src="layout/js/scripts.js"></script>
 </body>
 </html>
